; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/mikrotik/extr_rb_led.c_rbled_toggle.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/mikrotik/extr_rb_led.c_rbled_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rbled_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @rbled_toggle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rbled_toggle(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rbled_softc*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.rbled_softc*
  store %struct.rbled_softc* %7, %struct.rbled_softc** %5, align 8
  %8 = load %struct.rbled_softc*, %struct.rbled_softc** %5, align 8
  %9 = getelementptr inbounds %struct.rbled_softc, %struct.rbled_softc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.rbled_softc*, %struct.rbled_softc** %5, align 8
  %12 = getelementptr inbounds %struct.rbled_softc, %struct.rbled_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @GPIO_PIN_SET(i32 %10, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @GPIO_PIN_SET(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
